Container management fixed dark mode

--- a/Deloitte/app/scss/components/_darkmode-btn.scss
+++ b/Deloitte/app/scss/components/_darkmode-btn.scss
@@ -111,6 +111,7 @@
       &-applicant,
       &-sub-applicant,
       &-sub-internal {
+        background-color: $color-black-eerie;
         a {
           color: $color-white;
         }
